force-app/main/default/objects/Law_Risk_Event__c.object
<CustomObject>
    <label>法源風險事件</label>
    <nameField>
        <label>案由</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Court__c</fullName>
        <label>法院</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>法源風險事件</relationshipLabel>
        <relationshipName>Law_Risk_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigant__c</fullName>
        <label>當事人</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>案件類別</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Text__c</fullName>
        <label>主文</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.Employee_No__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judgment_Date__c</fullName>
        <label>裁判日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Judgment_Type__c</fullName>
        <label>裁判類別</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Text_Link__c</fullName>
        <label>本文連結</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Law_Risk_Event_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>法源風險事件外鍵</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Judgment_Date__c</columns>
        <columns>Court__c</columns>
        <columns>Judgment_Type__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Litigant__c</columns>
        <columns>Main_Text__c</columns>
        <columns>Full_Text_Link__c</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>